--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-DATABASE_URL='mysql://mxltaekpcrngklgqywvp:pscale_pw_z7GjXEJDRp6oHPa1JG9vFGH8cXG21lIxbgC3MPeiUWk@aws.connect.psdb.cloud/simplyeat?sslaccept=strict'
+DATABASE_URL='mysql://et2o549riajn8f46w97j:pscale_pw_DSWrc15yAxGLuyAMtrfI7FH7tSzcdsJw5Lgp2tObGm7@aws.connect.psdb.cloud/simplyeat?sslaccept=strict'
